force-app/main/default/objects/Integration_Log__c/fields/Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Name__c</fullName>
    <label>Record Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>