force-app/main/default/objects/Integration_Log__c/fields/REST_Request_Body__c.field-meta.xml
<CustomField>
    <fullName>REST_Request_Body__c</fullName>
    <label>REST Request Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>